# Hotel-Management-System

./: config.cfg  main.py  readme.rst  requirements.txt  setup.cfg  setup.py
Hotel_Management_System.egg-info/: PKG-INFO  SOURCES.txt
src/: config.json
