[metadata]
name = hotel_management_system
version = 0.1.1
author = Sannidhya Dasgupta
author_email = sannidhya127@gmail.com
description = "Just another hotel Management system in python"
long_description = file: README.rst
long_description_content_type = text/restructuredtext
url = https://github.com/Sannidhya127/Hotel-Management-System
project_urls =
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: Apache License
Operating System :: OS Independent
[options]
package_dir=find_packages(include=['src'])
packages=find_packages(include=['src'])
python_requires = >=3.6
